# HOLY-CODING

./: LICENSE  pyproject.toml
bible/: cache.py  cli.py  core.py  scraper.py  verses.json
faith_cli/: cache.py  cli.py
tests/: request_test.py  test_scraper.py
