[project]
name = "faith-cli"
version = "0.1.0"
description = "This app is here to give you hope with some bible verses directly in your terminal."
authors = [
    {name = "billythegoat1",email = "nitungabilly@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]

[tool.poetry.scripts]
faith = "faith_cli.cli:display"

[tool.poetry.group.dev.dependencies]
shell = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
